# realignerpreview

./: .gitignore  ARP Leaderboard Tracker + Dashboar.py  ARPPiAGradientDescent_Documentation.md  CITATION.cff  CONTRIBUTING.md  GITHUB_PUBLISHING_GUIDE.md  LongRun.py  README-TESTS.md  README.md  README_updated.md  RealignR-Q + GR-analog Redshift.md  action.py  adamw_acp_curvature_example.py  adaptive_pi_arc_vs_chord.py  analyze_dataset_switching.py  analyze_optimization_results.py  api_server.py  arp_mnist_example.py  arp_pia_optimizer.py  arp_pia_optimizer_plus.py  arp_resume_CPRv3.py  arp_resume_CPRv4_staged.py  arp_resume_CPRv5_adaptive.py  arp_resume_CPRv7_1_observer.py  arp_resume_CPRv7_2_early_observer.py  arp_resume_CPRv7_relocalize.py  arp_runner_llama_fusion.py  arp_runner_llama_fusion_CPRv2.py  arp_runner_llama_fusion_CPRv2_fix.py  arp_simple_debug.py  arp_simple_example.py  arpsuperopt.py  arpsuperoptold.py  check_l2.py  compare_optimizers.py  dataset_schedule.json  github_setup.py  import torch.py  leaderboard_autoloader.py  leaderboard_dashboard.py  (+47 more)
.github/: FUNDING.yml
arppp/: arppp.ncu-proj
configs/: ladder4_xt.yaml
examples/: appr.py  long_run_training.py  long_run_v3.py  long_run_v4.py  long_run_v5.py  long_run_v5a.py  longrunv2.py  watch_tens_fe.py  watch_tensorboard_feedback_live.py
ft/: dyn_metric_128.yaml
models/: __init__.py  resnet.py  simple_cnn.py
optim/: realignr.py
optimizers/: __init__.py  arp_adamw_optimizer.py  arp_optimizer.py  mlarp_optimizer.py  narp_optimizer.py  robust_mlarp_optimizer.py  unified_arp_optimizer.py
(+50 files in other folders)
